--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <style>
 </style>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,18 +33,23 @@
             </a>
         </div>
     </div>
-      <nav class = "navbar-right navbar-expand-lg navbar-dark bg-dark">
-        <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar">
+      <nav class = "navbar-left navbar-expand-lg navbar-dark bg-dark">
+        <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class = "navbar-toggler-icon is-primary"></span>
         </button>
         <div class = "collapse navbar-collapse" id = "navbar">
-            <div class = "navbar-nav">
-                {% if current_user.id == 1 %}
-                <a style="color:orange;" class = "nav-item" href = "{{ url_for('manager') }}"><b>Menu</b></a>
-                {% else %}
-                <a style="color:orange;" class = "nav-item" href = "{{ url_for('view_menu') }}"><b>Menu</b></a>
-                {% endif %}
+            <div class = "navbar-nav mr-auto">
                 <ul >
+                {% if current_user.id == 1 %}
+                    <li>
+                        <a style="color:orange;" class = "nav-item" href = "{{ url_for('manager') }}"><b>Menu Manager</b></a>
+                    </li>aria-expanded="false" aria-label="Toggle navigation">
+                {% else %}
+                    <li>
+                        <a style="color:orange;" class = "nav-item" href = "{{ url_for('view_menu') }}"><b>Menu</b></a>
+                    </li>
+                {% endif %}
+
                     <li>
                         <a style="color:orange;" class = "nav-item" href="{{ url_for('shopping_cart') }}"><b>Your Cart</b></a>
                     </li>
@@ -114,6 +118,7 @@
       </a>
       {% endif %}
       {% endif %}
+
 
 
 </body>
