--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
     </p>
     <br>
 
-    <a class = " menu-option" href="{{ url_for('login') }} ">
+    <a class = " menu-option text-dark" href="{{ url_for('login') }} ">
         Login
     </a>
-    <a class = " menu-option" href="{{ url_for('signup') }}">
+    <a class = " menu-option text-dark" href="{{ url_for('signup') }}">
         Sign up
     </a>
     {% endif %}
