--- a/templates/view_option/view_menu.html
+++ b/templates/view_option/view_menu.html
@@ -349,10 +349,40 @@
       </div>
       <div class="modal-body">
         <table class="show-cart table">
-
+            <h2 class="has-text-weight-bold has-text-black is-size-3 py-2">
+                Your order
+            </h2>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="notification is-danger">
+                    {{ messages[0] }}
+                </div>
+            {% endif %}
+            {% endwith %}
+            
+            <section class="section has-text-weight-bold has-text-grey">
+                {% for order in orders %}
+                <div class="container">
+                    <div class=" columns is-mobile">
+                        <div class="column is-1">{{ order[1] }}x</div>
+                        <div class="column is-8">{{ order[0] }}</div>
+                        <div class="column is-3">${{ order[2] }}</div>
+                    </div>
+                </div>
+                {% endfor %}
+            </section>
+            
+                <section class="section">
+                    <div class="container">
+                        <div class=" columns is-mobile">
+                            <div class="column is-4 confirm-text">
+                                <p class="has-text-grey has-text-weight-bold">Total Price ${{current_user.total_price}}</p>
+                            <div class="column is-2"></div>
+                            <div class="column is-8">
+                            </div>
+                        </div>
+                </section>
         </table>
-        <div>Total price: $<span class="total-cart"></span></div>
-      </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button class="clear-cart btn btn-danger" >Clear Cart</button>
