--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
                 {% endif %}
 
                     <li>
-                        <a style="color:orange;" class = "nav-item" href="{{ url_for('shopping_cart') }}"><b>Your Cart</b></a>
+                        <a style="color:orange;" class = "nav-item" href="{{ url_for('confirm_order') }}"><b>Your Cart</b></a>
                     </li>
                     <li>
                         <a style="color:orange;" class = "nav-item" href="{{ url_for('order_manager') }}"><b>Your Order</b></a>
