--- a/templates/view_option/view_account.html
+++ b/templates/view_option/view_account.html
@@ -12,7 +12,7 @@
         <li><a class = "menu-option text-dark" href="{{ url_for('profile') }}" >
             <b><strong>View profile</strong></b>
         </a></li>
-        <li><a class = "menu-option text-dark" href="#">
+        <li><a class = "menu-option text-dark"  href="{{ url_for('change_password') }}">
             <b><strong>Change password</strong></b>
         </a></li>
         <li><a class = "menu-option text-dark" href="#" >
